# MinVR

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md
AppKits/AppKit_G3D9/example/include/: G3D9DemoApp.H
AppKits/AppKit_G3D9/example/source/: G3D9DemoApp.cpp  main.cpp
AppKits/AppKit_G3D9/include/AppKit_G3D9/: MVREngineG3D9.H  OffAxisCameraG3D9.H  WindowG3D9.H
AppKits/AppKit_G3D9/source/: MVREngineG3D9.cpp  OffAxisCameraG3D9.cpp  WindowG3D9.cpp
AppKits/AppKit_GLFW/: CMakeLists.txt
AppKits/AppKit_GLFW/example/: CMakeLists.txt
AppKits/AppKit_GLFW/example/include/: GLFWDemoApp.H
AppKits/AppKit_GLFW/example/source/: GLFWDemoApp.cpp  main.cpp
AppKits/AppKit_GLFW/include/AppKit_GLFW/: MVREngineGLFW.H  WindowGLFW.H
AppKits/AppKit_GLFW/source/: MVREngineGLFW.cpp  WindowGLFW.cpp
AppKits/AppKit_Glut/include/MVRGlut/: MVRApp_Glut.H  MVRWindow_Glut.h
AppKits/AppKit_Glut/source/: MVRApp_Glut.cpp  MVRWindow_Glut.cpp
MVRCore/: CMakeLists.txt
MVRCore/include/Boost/: BoostFileSystem.h  BoostLogger.h  BoostThread.h  BoostTime.h
MVRCore/include/MVRCore/: AbstractCamera.H  AbstractInputDevice.H  AbstractMVRApp.H  AbstractMVREngine.H  AbstractWindow.H  CameraOffAxis.H  CameraTraditional.H  ConfigMap.H  ConfigVal.H  DataFileUtils.H  DeviceFactory.h  Event.H  InputDeviceSpaceNav.H  InputDeviceTUIOClient.H  InputDeviceVRPNAnalog.H  InputDeviceVRPNButton.H  InputDeviceVRPNTracker.H  Rect2D.H  RenderThread.H  StereoDisplayFactory.h  StringUtils.H  Thread.h  Time.h  WindowSettings.H
MVRCore/include/MVRCore/Display/: StereoDisplay.h  StereoDisplayFactory.h
MVRCore/include/framework/: InputDevice.h
MVRCore/include/framework/plugin/: Plugin.h  PluginFramework.h  PluginInterface.h  PluginManager.h  SharedLibrary.h
MVRCore/include/io/: BasicFileSystem.h  FileSystem.h
MVRCore/include/log/: BasicLogger.h  CompositeLogger.h  Logger.h  ThreadSafeLogger.h
MVRCore/shaders/: stereo-checkerboard.frag  stereo-interlacedcolumns.frag  stereo-interlacedrows.frag  stereo.vert
MVRCore/source/: AbstractMVREngine.cpp  AbstractWindow.cpp  CameraOffAxis.cpp  ConfigMap.cpp  ConfigVal.cpp  DataFileUtils.cpp  Event.cpp  InputDeviceSpaceNav.cpp  InputDeviceSpaceNav_Linux.cpp  InputDeviceSpaceNav_OSX.cpp  InputDeviceSpaceNav_Windows.cpp  InputDeviceTUIOClient.cpp  InputDeviceVRPNAnalog.cpp  InputDeviceVRPNButton.cpp  InputDeviceVRPNTracker.cpp  Rect2D.cpp  RenderThread.cpp  StringUtils.cpp
MVRCore/source/Boost/: BoostFileSystem.cpp  BoostLogger.cpp
MVRCore/source/framework/plugin/: PluginManager.cpp  SharedLibrary.cpp
MVRCore/source/io/: BasicFileSystem.cpp  FileSystem.cpp
MVRCore/source/log/: BasicLogger.cpp  CompositeLogger.cpp  Logger.cpp  ThreadSafeLogger.cpp
MVRCore/vrsetup/: desktop.vrsetup  oculus.vrsetup
Plugins/Devices/OculusRift/: CMakeLists.txt  Empty.cpp  Empty.h  OculusRiftDisplay.cpp  OculusRiftDisplay.h
Plugins/Devices/TUIO/: CMakeLists.txt  InputDeviceTUIOClient.H  InputDeviceTUIOClient.cpp  TuioDeviceFactory.cpp  TuioDeviceFactory.h
cmake/: minvr_minvrconfig.cmake
cmake/Modules/: FindLibVRPN.cmake
dependencies/tuio/: CMakeLists.txt  TuioServer.cpp
